EC2.tf
resource "aws_instance" "web_server" {
  ami           = "ami-091138d0f0d41ff90"
  instance_type = "t2.micro"

  subnet_id = aws_subnet.public_subnet_1.id

  vpc_security_group_ids = [
    aws_security_group.ssh_security.id
  ]

  key_name = aws_key_pair.my_key.key_name

  tags = {
    Name = "jump_box"
  }
}

resource "aws_instance" "private_server" {
  ami           = "ami-048700f1f7f2e1a70"
  instance_type = "t2.micro"

  subnet_id = aws_subnet.private_subnet_1.id

  vpc_security_group_ids = [
    aws_security_group.internal_security.id
  ]

  key_name = aws_key_pair.my_key.key_name

  tags = {
    Name = "APP"
  }
}
